node express 쿠기 세션

--- a/node-express/views/index.html
+++ b/node-express/views/index.html
@@ -20,43 +20,13 @@
     </style>
 </head>
 <body>
-<form>
-    <input type="file" alt="aa">
+<form method="post">
+    <div>
+        <input name="image" type="file" >
+    </div>
     <button type="submit">
         submit
     </button>
 </form>
-<div><h1>스마트폰</h1></div>
-<div><p>스마트폰은 컴퓨터를 결합한 무선 휴대전화기이다. PC 에서 실행되는 운영체제보다 작게 만든 모바일 운영체제를 탑재하여 인터넷 검색,
-    전자우편 간단한 문서 편비 카메라 오디오 및 비디오 재생 등Pc의 기능을 모두 갗추고 있다. </p></div>
-<h2>
-    목차
-</h2>
-<ul>
-    <li><a href="#history_link">역사</a></li>
-    <li><a href="#android_link">안드로이드폰</a></li>
-    <li><a href="#ios_link">아이폰</a></li>
-    <li><a href="#sample_link">샘플</a></li>
-</ul>
-<div>
-    <h1 id="history_link">역사</h1>
-    <p>최초의 스마트폰은 사이먼(Symon)으로 추정된다. TBM 사가 1992년에 설계하여 그 해에 미국 네바다 주의 라스베이거ㅏ스에서 열린 컴덱스에서 컨셉제품으로 전시되었다.</p>
-</div>
-<div>
-    <h1 id="android_link">안드로이드폰</h1>
-    <p>안드로이드 (영어:Android) 은 휴대전화를 비롯한 휴대용 장치를 위한 운영 체제와 미들웨어 사용자 인터페이스 그리고 표준 응용 프로그램 (웹 브라우저, 이메일 클라이언트
-        단문 문자메세지 서비스 (SMS) 멀티미디어 메시지 서비스(MMS)등)을 포함하고 있는 소프트웨어 스택이자 모바일 운영체제 이다.</p>
-</div>
-<div>
-    <h1 id="ios_link">
-        아이폰
-    </h1>
-    <p> 아이폰(영어:iphone)은 2007년 1월 9일 애플이 발표한 휴대전화 시리즈이다. 미국 샌프란시스코에서 열린 맥월드 2007에서 애프릐 창업자중 한명인 스티브 잡스가 발표했다.</p>
-</div>
-<h1 id="sample_link">
-    샘플
-</h1>
-<img src="https://img.appstory.co.kr/@files/monthly.appstory.co.kr/thum/Bdatafile/Board/dir_117/11758.png"
-     alt="스마트폰 사진"/>
 </body>
 </html>
